<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="32dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDeparture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutArrival"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/layoutDeparture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editArrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/arrival"
            android:inputType="text"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/layoutArrival"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/select_time"
            android:focusable="false"
            android:inputType="none"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        app:cornerRadius="24dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/layoutTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_500" />
</androidx.constraintlayout.widget.ConstraintLayout>
